fixed spacing for inputs in sign up and log in page and also spacing on log in page

--- a/components/LoginInputs/LoginInputs.module.css
+++ b/components/LoginInputs/LoginInputs.module.css
@@ -1,35 +1,56 @@
 .main {
     display:flex;
-    flex-direction:column;
-    align-items:center;
+    flex-direction: column;
     width:100%;
+    height: 884px;
+    padding-bottom: 0px;
 }
 
 .logoPic img {
-    object-fit:contain;
+    object-fit: contain;
+    align-items:center;
 }
 
-.loginButton a {
-    text-decoration:none;
-    color: var(--primary-black);
+.logoPic {
+    align-items:center;
+    margin:auto;
+}
+
+.loginButton {
+    padding-left:3em;
 }
 
 .input {
     border: 1px black solid;
-    padding-top:0.5em;
-    padding-bottom:0.5em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
     font-family: 'manrope';
-    border-radius:10px;
-    width:100%;
-    margin:auto;
-    padding-left:1em;
+    padding-left: 0.75em;
+    border-radius: 10px;
+    width: 100%;
 }
 
-.forgotPW {
-    font-size:13px;
-    padding-bottom:2em;
+
+.forgotPW p {
+    font-size: 13px;
+    padding-bottom: 2em;
 }
 
 .forgotPW:hover {
-    cursor:pointer;
+    cursor: pointer;
+}
+
+.box h4 {
+    margin-bottom: 0.75em;
+}
+
+.box {
+    width: 100%;
+}
+
+.box h2 {
+    text-align: center;
+    margin-bottom:0.25em;
+    margin-top:0.25em;
+    font-weight:700;
 }
